older versions.

Current git version
-------------------

  * New herbstclient mode *--binary-pipe* which allows to send multiple
    commands through a single herbstclient instance.
  * CSS-inspired theme engine (new attributes 'theme.name',
    'theme.style_override')
  * New client attribute 'sticky' (does not react yet to EWMH requests)
  * The setting 'smart_window_surroundings' has been changed to accept the
    following new values: 'off', 'one_window' (equivalently 'on'), and
    'one_window_and_frame'. Setting it to 'one_window_and_frame' will only hide
    window surroundings when there is only one window and one frame in a tag,
    'one_window' and 'off' mirror the old behaviour with regards to 'true' and
    'false'.
  * New support for extra mouse buttons (up to 9). These values are hard-coded,
    but upstream X.h also uses hardcoded values, so potential for breakage
    should be minimal.
  * Bug fix: Only redraw after new WM_NORMAL_HINTS if it would affect the
    clients geometry.

Release 0.9.5 on 2022-07-30
---------------------------

  * Key binds for release events.
  * The Setting 'smart_frame_surroundings' has been changed to accept the
    following new values: 'off', 'hide_all', and 'hide_gaps'. Setting it to
    'hide_gaps' will only hide frame gaps when applicable, 'hide_all' and 'off'
    mirror the old behaviour with regards to 'true' and 'false'.
  * New format '%{ }' for easier attribute access in the sprintf command 
  * New setting 'show_frame_decorations' that controls when frame decorations
    are shown. This should be used instead of the old 'always_show_frame'
  * New frame attribute 'content_geometry'
  * New tag attribute 'at_end'
  * New monitor attribute 'content_geometry'
  * New attribute 'panels.geometry_fallback'
  * Fix bug in ipc protocol for big-endian systems

Release 0.9.4 on 2022-03-16
---------------------------

  * Tabbed window titles in the 'max' layout algorithm (controllable via the