@@ -12,6 +12,9 @@ Current git version
   * CSS-inspired theme engine (new attributes 'theme.name',
     'theme.style_override')
   * New client attribute 'sticky' (does not react yet to EWMH requests)
+  * New option `if_multiple_empty` for `settings.show_frame_decorations`
+    that only shows the frame decorations on a tag with multiple frames 
+    and no client windows.
   * The setting 'smart_window_surroundings' has been changed to accept the
     following new values: 'off', 'one_window' (equivalently 'on'), and
     'one_window_and_frame'. Setting it to 'one_window_and_frame' will only hide
